--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "Pistilli";
-  src: url('./assets/fonts/Pistilli-Roman.otf') format("opentype");
+  src: url('./fonts/Pistilli-Roman.otf') format("opentype");
   font-weight: bold;
   font-style: normal;
 }
